Remove tagline from under-construction page

--- a/under-construction/index.html
+++ b/under-construction/index.html
@@ -49,7 +49,7 @@
           </svg>
         </div>
 
-        <p class="positioning">Accounting Advisory &amp; Finance Digitalization for SMEs</p>
+        <p class="positioning"></p>
 
         <h1 id="title">Under Construction</h1>
         <p id="lead" class="lead">We’re preparing our new website.<br>In the meantime, reach us at <a href="mailto:pizzo@alveris-advisory.ch">pizzo@alveris-advisory.ch</a>.</p>
